fixed alignment of remember me button

--- a/src/css/view/login-register.scss
+++ b/src/css/view/login-register.scss
@@ -114,6 +114,13 @@ $sizes: 10, 20, 25, 30, 33, 40, 50, 60, 66, 70, 75, 80, 90, 100;
         display: flex;
         font-size: .9em;
 
+        .forget-menot {
+            display: flex;
+            align-items: center;
+            label {
+                margin: 0 0 0 10px;
+            }
+        }
         .forget-menot, .forget-pass {
             flex: 1;
             margin: 0;
